black-onion/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: blackonion
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - image: ghcr.io/black0nion/website
        name: website
        command: ["node"]
        args: ["server.js", "--prod", "--no-startup-message"]
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: ghcr
